--- a/travelus/MainStoryboard~iphone.storyboard
+++ b/travelus/MainStoryboard~iphone.storyboard
@@ -74,10 +74,50 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="列表" id="MtD-Vj-Mdx"/>
+                    <connections>
+                        <segue destination="B04-XZ-q4d" kind="push" identifier="Detail" id="Zis-kT-6iO"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SmC-GJ-8xb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="534" y="-567"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="DI0-Ss-ut4">
+            <objects>
+                <tableViewController id="B04-XZ-q4d" customClass="RCDetailViewController" sceneMemberID="viewController">
+                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="singleLineEtched" rowHeight="442" sectionHeaderHeight="10" sectionFooterHeight="10" id="jLt-K0-ybp">
+                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TextCell" rowHeight="442" id="Bvq-k7-vZF">
+                                <rect key="frame" x="0.0" y="46" width="320" height="444"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                    <rect key="frame" x="10" y="1" width="300" height="441"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <webView tag="99" contentMode="scaleToFill" id="bXy-qx-Dvb">
+                                            <rect key="frame" x="20" y="20" width="260" height="401"/>
+                                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </webView>
+                                    </subviews>
+                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                </view>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="B04-XZ-q4d" id="5KZ-x7-Pe4"/>
+                            <outlet property="delegate" destination="B04-XZ-q4d" id="1TH-zM-0sU"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="ap5-cD-WFL"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vfX-Ur-0cu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1049" y="-567"/>
         </scene>
         <!--Date List View Controller - 日期-->
         <scene sceneID="Vg5-L8-rkq">
@@ -138,6 +178,9 @@
         </class>
         <class className="RCDetailListViewController" superclassName="UITableViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RCDetailListViewController.h"/>
+        </class>
+        <class className="RCDetailViewController" superclassName="UITableViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/RCDetailViewController.h"/>
         </class>
         <class className="RCMainViewController" superclassName="UIViewController">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/RCMainViewController.h"/>
